--- a/binary/pom.xml
+++ b/binary/pom.xml
@@ -17,5 +17,10 @@
   		<artifactId>orientdb-server</artifactId>
   		<version>${odb.version}</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-databind</artifactId>
+  		<version>2.3.2</version>
+  	</dependency>
   </dependencies>
 </project>
