--- a/core/pom.xml
+++ b/core/pom.xml
@@ -98,6 +98,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-databind</artifactId>
+        	<version>2.3.3</version>
+        </dependency>
     </dependencies>
 
 </project>
